# TeemahAI

./: Cargo.toml
src/: agent.rs  app.css  app.html  global.d.ts  launchpad_services.rs  llm.rs  main.rs  wallet.rs  web3.rs
src/lib/: utils.ts
src/lib/components/: ChatInterface.svelte  ExecutionPanel.svelte  Sidebar.svelte  StatusBar.svelte
src/lib/services/: backend.ts
src/lib/wasm/: intent-engine.ts
src/routes/: +page.svelte  keep.svelte
