[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
ethers-contract = "2.0"
ethers-core = "2.0"
anyhow = "1.0"
log = "0.4"
ethers-providers = "2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures = "0.3"